# invoice_ocr

./: .dockerignore  .gitignore  README.md  main.py
api/: .env  pyproject.toml
api/docs/: 接口文档.md
api/test/base64/: base64_trans.py
api/v1/src/: ocr.py  test_time_script.py
api/v1/src/app/: __init__.py  main.py
api/v1/src/app/config/: config.py
api/v1/src/app/core/: __init__.py  manager.py  service.py
api/v1/src/app/core/engines/: __init__.py  base.py  paddle.py
api/v1/src/app/routers/: ocr.py
api/v1/src/app/schemas/: ocr.py
api/v1/src/app/utils/: image.py
docker/: Dockerfile  README.md  docker-compose.yml
