[project]
name = "ppr-v6-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.8",
    "paddleocr>=3.7.0",
    "paddlepaddle==3.2.2",
    "python-multipart>=0.0.20",
    "some-package>=0.1",
    "streamlit>=1.41.0",
    "uvicorn>=0.39.0",
]
